test/files/neg/t12433.check
t12433.scala:5: error: not found: value /
  def t1 = /
           ^
1 error
